Added all 3 donation cards

--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,7 @@
                   </svg>
                 </div>
                 <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 flex flex-col gap-5 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                    <button id="home" class="rounded-lg bg-[#B4F461] text-xl font-semibold text-[#111111] px-8 h-[49px]">Home</button>
+                    <button id="home-bar" class="rounded-lg bg-[#B4F461] text-xl font-semibold text-[#111111] px-8 h-[49px]">Home</button>
                     <div class="gap-2 flex-row justify-center items-center flex">
                         <img src="assets/coin.png" class="w-7">
                         <p class="text-xl font-medium text-[#111111] opacity-70" id="available-balance">5500</p>
@@ -62,7 +62,7 @@
         </nav>
     </header>
     <main class="h-full z-0">
-        <div class="pt-[110px]">
+        <div class="pt-[90px]">
             <div class="lg:m-[70px] m-[20px]">
                 <div class="flex flex-row gap-2 items-center">
                     <h1 class="text-[25px] lg:text-[30px] font-bold">Important FAQ</h1>
@@ -99,7 +99,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div><br>
     </main>
     <footer></footer>
     <!-- JS -->
