Completed all functions with js

--- a/index.html
+++ b/index.html
@@ -151,3 +151,7 @@
     <script src="js/index.js"></script>
 </body>
 </html>
+
+<!-- © All rights are reserved by Md Rafsan Afnan Rushan
+Email: info.rushberry@gmail.com
+Github: Rushberry -->
