--- a/index.html
+++ b/index.html
@@ -139,9 +139,7 @@
               </dialog>
             <!-- History Page -->
             <div id="history" class="w-full flex flex-col justify-center items-center hidden justify-center items-center ">
-                <div id="donate-history" class="flex flex-col-reverse gap-6">
-                    <!-- History will be added here through js -->
-                </div>
+                <div id="donate-history" class="flex flex-col-reverse gap-6"></div>
             </div>
             <br> <br>
         </div>
